# mih

./: CMakeLists.txt  README.md  TODO.md
examples/: benchmark.cpp  bitarray_benchmark.cpp  linscan_interface.cpp  mih_interface.cpp
include/: bitarray.h  bitops.h  bucket_group_stl.h  mihasher.h  result.h  sparse_hashtable.h
interface/: mih_interface.cpp
src/: array32.cpp  bucket_group.cpp  bucket_group_stl.cpp  mihasher.cpp  sparse_hashtable.cpp
test/: match.cpp  mih_initialize.cpp  mih_insert.cpp  mih_query.cpp
